--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   line_icons: ^2.0.3
   google_fonts: ^6.1.0
   flutter_bloc: ^8.1.3
+  firebase_core: ^2.21.0
 
 dev_dependencies:
   flutter_test:
