--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   google_fonts: ^6.1.0
   flutter_bloc: ^8.1.3
   firebase_core: ^2.21.0
+  firebase_auth: ^4.12.1
+  google_sign_in: ^6.1.5
+  equatable: ^2.0.5
+  shared_preferences: ^2.2.2
+  form_validator: ^2.1.1
 
 dev_dependencies:
   flutter_test:
