--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   equatable: ^2.0.5
   shared_preferences: ^2.2.2
   form_validator: ^2.1.1
+  cloud_firestore: ^4.12.2
 
 dev_dependencies:
   flutter_test:
