--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   shared_preferences: ^2.2.2
   form_validator: ^2.1.1
   cloud_firestore: ^4.12.2
+  get_it: ^7.6.4
 
 dev_dependencies:
   flutter_test:
